--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <div class="image">
                 <img src="photoshop.png">
             </div>
-            <h4 class="gameTitle">PHOTOSHOP BETA GENERATIVE FILL</h4>
+            <h4 class="gameTitle" style="font-size: 13px;">PHOTOSHOP BETA GENERATIVE FILL</h4>
             <div class="platform">
                 <span>Platforms:</span>
                 <div class="pic"><img src="android.png"></div>
