--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
     <div class="container">
         <div class="card">
             <div class="image">
-                <img src="/proj.jpg">
+                <img src="/gta.jpg">
             </div>
-            <h4 class="gameTitle">MOBILE PROJECTOR</h4>
+            <h4 class="gameTitle">GTA 5</h4>
            
             <button class="installBtn">GET</button>
         </div>
